TS-4764: Return the aligned field size from marshal_client_req_uuid().